force-app/main/default/objects/KYC_OCR__c/KYC_OCR__c.object-meta.xml
<CustomObject>
    <label>KYC OCR</label>
    <nameField>
        <label>KYC OCR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC OCR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>