force-app/main/default/objects/KYC_OCR__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KYC OCR</relationshipLabel>
    <relationshipName>KYC_OCR</relationshipName>
    <type>Lookup</type>
</CustomField>