force-app/main/default/objects/KYC_OCR__c/fields/DOI__c.field-meta.xml
<CustomField>
    <fullName>DOI__c</fullName>
    <label>DOI</label>
    <type>Date</type>
</CustomField>