force-app/main/default/objects/KYC_OCR__c/fields/Mothers_Name__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Name__c</fullName>
    <label>Mother&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>