force-app/main/default/objects/KYC_OCR__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>xName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>