force-app/main/default/objects/KYC_OCR__c/fields/Old_Passport_DOI__c.field-meta.xml
<CustomField>
    <fullName>Old_Passport_DOI__c</fullName>
    <label>Old Passport DOI</label>
    <type>Date</type>
</CustomField>