force-app/main/default/objects/KYC_OCR__c/fields/Old_Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Old_Passport_No__c</fullName>
    <label>Old Passport No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>