force-app/main/default/objects/KYC_OCR__c/fields/Old_Passport_Place_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Old_Passport_Place_Of_Issue__c</fullName>
    <label>Old Passport Place Of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>