force-app/main/default/objects/KYC_OCR__c/fields/Passport_FileNo__c.field-meta.xml
<CustomField>
    <fullName>Passport_FileNo__c</fullName>
    <label>Passport FileNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>