force-app/main/default/objects/KYC_OCR__c/fields/Spouce_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouce_Name__c</fullName>
    <label>Spouce Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>